# framework.connectivity.wifi-direct-manager

./: CMakeLists.txt  project.config  wifi-direct-manager.manifest
debian/: changelog
files/: p2p_supp.sh  wifi-direct-dhcp.sh
files/common/: p2p_supp.sh  wifi-direct-dhcp.sh
include/: wifi-direct-group.h  wifi-direct-manager.h  wifi-direct-util.h
oem/: wifi-direct-oem.c  wifi-direct-oem.h
oem/include/: wifi-direct-oem.h
packaging/: wifi-direct-manager.spec
plugin/wpasupplicant/: CMakeLists.txt  wfd-plugin-wpasupplicant-emul.c  wfd-plugin-wpasupplicant.c  wfd-plugin-wpasupplicant.h
plugin/wpasupplicant/ctrl_iface_dbus/: wfd-plugin-wpasupplicant.c
plugin/wpasupplicant/ctrl_iface_dbus/include/: wfd-plugin-wpasupplicant.h
plugin/wpasupplicant/ctrl_iface_sock/: wfd-plugin-wpasupplicant.c
plugin/wpasupplicant/ctrl_iface_sock/include/: wfd-plugin-wpasupplicant.h
plugin/wpasupplicant/include/: wifi-direct-wpasupplicant.h
plugin/wpasupplicant/src/: wifi-direct-plugin.c
src/: wifi-direct-client-handler.c  wifi-direct-client.c  wifi-direct-event-handler.c  wifi-direct-event.c  wifi-direct-group.c  wifi-direct-main.c  wifi-direct-manager.c  wifi-direct-peer.c  wifi-direct-service.c  wifi-direct-session.c  wifi-direct-state.c  wifi-direct-util.c
